[package]
name = "peacock-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.11.0"
